fixed empty black slides for coverflow effect, refactored styles for Swiper components/elements

--- a/src/index.css
+++ b/src/index.css
@@ -27,23 +27,6 @@
     }
 }
 
-@keyframes fadeIn {
-  0%{
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.animate-fadeIn {
-  animation: fadeIn 4s ease-in-out;
-}
-
-.animate-fadeIn-2 {
-  animation: fadeIn 3s ease-in-out;
-}
-
 .swiper-pagination-bullet {
   background-color: #fff;
   opacity: 0.5;
@@ -73,6 +56,19 @@
 .custom-pagination .swiper-pagination-bullet-active {
   background-color: #FF6666;
   opacity: 1;
+}
+
+/* Styling for Coverflow Effect Swiper (Cards Component) */
+.swiper-slide {
+  /* This is the class to configure the actual size of each slide container */
+  background-position: center;
+  background-size: cover;
+  width: fit-content;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
 
 
